--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
 body {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #546a83;
+}
+
+h1 {
+  font-family: "Indie Flower", cursive;
+  font-size: 55px;
+  color: white;
 }
 
 .flip-card {
@@ -8,25 +17,22 @@ body {
   width: 700px;
   height: 500px;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
 }
 
-/* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 1s;
   transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
   position: absolute;
@@ -36,15 +42,15 @@ body {
   backface-visibility: hidden;
 }
 
-/* Style the front side (fallback if image is missing) */
 .flip-card-front {
   background-color: #bbb;
   color: black;
 }
 
-/* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
+  background-color: #81c0e9;
   color: white;
+  font-family: "Indie Flower", cursive;
+  font-size: 30px;
   transform: rotateY(180deg);
 }
